--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
 		<imagetarget id='Country pineapple packaging_front' src='targets/Country pineapple packaging_front.jpg'></imagetarget>
 		<imagetarget id='Country pineapple packaging_front' src='targets/Country pineapple packaging_front.jpg'></imagetarget>
+		<imagetarget id='Country pineapple packaging_front' src='targets/Country pineapple packaging_front.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <!-- <video id="webcam-video" muted autoplay playsinline style="width:100%; height:100%; object-fit:cover; position:absolute"></video> -->
